
= CSS =
* Added `Navigation` section and `Pagination Method` sub-section
* Corrected `select` element to use "max-width" rather than "width"
* Complete refactoring of the styles for better responsiveness
* Fixed white space on right side of iPhone displays
* Monster be gone! - addressed special case many level menu in sidebar

= Miscellaneous =
* Updated `hooks-filter.txt` documentation to note new filter `opus_navigation_pagination`

== Version 1.2.4 ==
* Released May 2014

= Code =
* Added sanity check to only display comments_link when not in single view or in an archive view
* Added Featured Image Thumbnails to post-format single and archive view templates (except Post-Formats: Image and Gallery)
* Added `opus_primus_theme_version()` call as an accessible text string
* Added new default `number_of_secondary_images` method under Gallery parameters
* Bring the Featured Image Thumbnail back into the index view ... can you say "waffle"?
* Change `$output = null` to `$output = ''` in `OpusPrimusPosts::sticky_flag` method
* Corrected typo in `'opus_links_pages_after'` hook
* Corrected modified date/time output to account for scheduled posts being modified earlier than they are posted
* Refactored conditional comments and featured thumbnail checks into the `comments_link` and `show_featured_thumbnail` methods
* Removed `extract` function, escaped attributes, and refactored conditional checks in PullQuotes Stanza
* Use `opus_primus_theme_version` in place of `wp_get_theme` calls
* Use transients to improve performance impact of the `OpusPrimusStructures::copyright` method

= CSS =
* Added Format-Aside Dashicons to Post-Format: Aside posts
* Added Flag Dashicons to Sticky Posts
* Changed Password Protected Dashicons to use the Lock
* Separated the Tagline output class into two different classes
* Updated normalize.css to 3.0.1 (copy and pasted from git.io/normalize)

= Miscellaneous =
* Added filter `opus_primus_theme_version_text`