@@ -22,6 +22,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Complete refactoring of the styles for better responsiveness
 * Fixed white space on right side of iPhone displays
 * Monster be gone! - addressed special case many level menu in sidebar
+* Minor adjustments to `img` tag related items
 
 = Miscellaneous =
 * Updated `hooks-filter.txt` documentation to note new filter `opus_navigation_pagination`
